<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context="com.tommyputranto.myapplication.MainActivity">

   <EditText
       android:id="@+id/edt_name"
       android:hint="@string/name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_alamat"
        android:hint="@string/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_jenkel"
        android:hint="@string/jenkel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="pickImage"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:background="#4286f4" />

    <com.theartofdev.edmodo.cropper.CropImageView
        android:scaleType="centerInside"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:onClick="uploadImage"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:background="#4286f4" />
</LinearLayout>
